--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
   },
   "homepage": "https://github.com/epestanamx/wordle-backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "ts-node-dev": "^2.0.0"
   }
 }
