--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
+    "test": "jest",
     "start": "node dist/index.js"
   },
   "repository": {
@@ -34,22 +35,27 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.3",
     "@types/node-cron": "^3.0.2",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/jest": "^28.1.4",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jest": "^28.1.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.7",
     "typeorm-seeding": "^1.6.1"
